// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page renders scroll button with animation 1`] = `
<div>
  <title>
    Mock SG-Test
  </title>
  <div>
    Mock Hero
  </div>
  <button
    class="mantine-UnstyledButton-root mantine-956te5"
    title="Eiti žemyn"
    type="button"
  />
  <div
    class="mantine-Container-root mantine-1hy4it3"
  >
    <h2
      class="mantine-Text-root mantine-Title-root mantine-44lm1w"
    >
      Paslaugos
    </h2>
    <div
      class="mantine-Divider-root mantine-Divider-horizontal mantine-1ah7ro1"
      role="separator"
    />
    <div>
      Mock Services
    </div>
  </div>
  <div
    class="mantine-Center-root mantine-1y5prk2"
  >
    <a
      class="mantine-UnstyledButton-root mantine-Button-root mantine-1s2d5g8"
      data-button="true"
      href="/susisiekite"
      type="button"
    >
      <div
        class="mantine-1wpc1xj mantine-Button-inner"
      >
        <span
          class="mantine-1ryt1ht mantine-Button-label"
        >
          Susisiekite
        </span>
        <span
          class="mantine-Button-icon mantine-Button-rightIcon mantine-467wo8"
        >
          <svg
            class="icon icon-tabler icon-tabler-chevron-right"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <polyline
              points="9 6 15 12 9 18"
            />
          </svg>
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`Home page renders scroll button without animation 1`] = `
<div>
  <title>
    Mock SG-Test
  </title>
  <div>
    Mock Hero
  </div>
  <button
    class="mantine-UnstyledButton-root mantine-exdozc"
    title="Eiti žemyn"
    type="button"
  />
  <div
    class="mantine-Container-root mantine-1hy4it3"
  >
    <h2
      class="mantine-Text-root mantine-Title-root mantine-44lm1w"
    >
      Paslaugos
    </h2>
    <div
      class="mantine-Divider-root mantine-Divider-horizontal mantine-1ah7ro1"
      role="separator"
    />
    <div>
      Mock Services
    </div>
  </div>
  <div
    class="mantine-Center-root mantine-1y5prk2"
  >
    <a
      class="mantine-UnstyledButton-root mantine-Button-root mantine-1s2d5g8"
      data-button="true"
      href="/susisiekite"
      type="button"
    >
      <div
        class="mantine-1wpc1xj mantine-Button-inner"
      >
        <span
          class="mantine-1ryt1ht mantine-Button-label"
        >
          Susisiekite
        </span>
        <span
          class="mantine-Button-icon mantine-Button-rightIcon mantine-467wo8"
        >
          <svg
            class="icon icon-tabler icon-tabler-chevron-right"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <polyline
              points="9 6 15 12 9 18"
            />
          </svg>
        </span>
      </div>
    </a>
  </div>
</div>
`;
